Add separate synquant params per channel

--- a/20230104_synapse_data_plots/20240229_chrdl1_data_plots.Rmd
+++ b/20230104_synapse_data_plots/20240229_chrdl1_data_plots.Rmd
@@ -26,7 +26,7 @@ library(nlme)
 manual_synbot_data <- read.csv("chrdl1_ko_data/chrdl1_ko_manual.csv")
 ilastik_data <- read.csv("chrdl1_ko_data/chrdl1_ko_manual.csv")
 puncta_analyzer_data <- read.csv("chrdl1_ko_data/chrdl1_ko_manual.csv")
-synquant_data <- read.csv("chrdl1_ko_data/chrdl1_ko_synquant.csv")
+synquant_data <- read.csv("chrdl2_ko_synquant_5_12.csv")
 #SynQuant params:
 # zscore_thres=10
 # MinSize=10
