--- a/20230104_synapse_data_plots/20240306_sim_data_plots.Rmd
+++ b/20230104_synapse_data_plots/20240306_sim_data_plots.Rmd
@@ -23,9 +23,9 @@ library(nlme)
 #manual_synbot_data <- read.csv("a2d1_invivo_data/20230119_juan_manual_cleaned.csv")
 #ilastik_data <- read.csv("a2d1_invivo_data/20230125_2_ilastik.csv")
 
-manual_synbot_data <- read.csv("simulated_data/sim_combined_percent_hist_2.csv")
-ilastik_data <- read.csv("simulated_data/sim_combined_ilastik.csv")
-synquant_data <- read.csv("simulated_data/sim_combined_synquant.csv")
+manual_synbot_data <- read.csv("simulated_data/sim_sparse_manual.csv")
+ilastik_data <- read.csv("simulated_data/sim_sparse_ilastik.csv")
+synquant_data <- read.csv("simulated_data/sim_sparse_synquant_10_12.csv")
 #SynQuant params:
 # zscore_thres=10
 # MinSize=10
@@ -223,154 +223,6 @@ ggplot(summarize(group_by(synquant_data, condition), mean(Colocalized.Puncta.Cou
 
 
 
-```{r normalized stats}
-
-#calculate normalized condition means for each pair
-manual_norm_means <- summarize(group_by(manual_synbot_data, condition, pair), mean(normalized_count))
-
-ilastik_norm_means <- summarize(group_by(ilastik_data, condition, pair), mean(normalized_count))
-
-synquant_norm_means <- summarize(group_by(synquant_data, condition, pair), mean(normalized_count))
-
-
-manual_synbot_grouped <- nlme::groupedData(normalized_count ~ condition | pair, data = manual_synbot_data)
-
-manual_synbot_lme <- nlme::lme(manual_synbot_grouped)
-
-manual_synbot_lme
-summary(manual_synbot_lme)
-anova(manual_synbot_lme)
-
-manual_synbot_tukeys <- summary(glht(manual_synbot_lme, linfct=mcp(condition="Tukey")))
-manual_synbot_tukeys
-manual_synbot_tukeysPH <- data.frame(as.character(row.names(manual_synbot_tukeys$linfct)), manual_synbot_tukeys$test$pvalues)
-
-#calculate sem = sd/sqrt(n)
-manual_sem_wt <- sd(manual_norm_means$`mean(normalized_count)`[which(grepl("WT", manual_norm_means$condition))])/sqrt(length(manual_norm_means$condition[which(grepl("WT", manual_norm_means$condition))]))
-
-manual_sem_ko <- sd(manual_norm_means$`mean(normalized_count)`[which(grepl("KO", manual_norm_means$condition))])/sqrt(length(manual_norm_means$condition[which(grepl("KO", manual_norm_means$condition))]))
-
-manual_synbot_data$sem <- 0
-manual_synbot_data$sem[which(grepl("WT", manual_synbot_data$condition))] <- manual_sem_wt
-manual_synbot_data$sem[which(grepl("KO", manual_synbot_data$condition))] <- manual_sem_ko
-
-#add normalized count to data frame
-manual_synbot_data$mean_normalized_count <- 0
-manual_synbot_data$mean_normalized_count[which(grepl("WT", manual_synbot_data$condition))] <- mean(manual_synbot_data$normalized_count[which(grepl("WT", manual_synbot_data$condition))])
-manual_synbot_data$mean_normalized_count[which(grepl("KO", manual_synbot_data$condition))] <- mean(manual_synbot_data$normalized_count[which(grepl("KO", manual_synbot_data$condition))])
-
-
-
-ilastik_grouped <- nlme::groupedData(normalized_count ~ condition | pair, data = ilastik_data)
-
-ilastik_lme <- nlme::lme(ilastik_grouped)
-
-ilastik_lme
-summary(ilastik_lme)
-anova(ilastik_lme)
-
-ilastik_tukeys <- summary(glht(ilastik_lme, linfct=mcp(condition="Tukey")))
-ilastik_tukeys
-ilastik_tukeysPH <- data.frame(as.character(row.names(ilastik_tukeys$linfct)), ilastik_tukeys$test$pvalues)
-
-#calculate sem = sd/sqrt(n)
-ilastik_sem_wt <- sd(ilastik_norm_means$`mean(normalized_count)`[which(grepl("WT", ilastik_norm_means$condition))])/sqrt(length(ilastik_norm_means$condition[which(grepl("WT", ilastik_norm_means$condition))]))
-
-ilastik_sem_ko <- sd(ilastik_norm_means$`mean(normalized_count)`[which(grepl("KO", ilastik_norm_means$condition))])/sqrt(length(ilastik_norm_means$condition[which(grepl("KO", ilastik_norm_means$condition))]))
-
-ilastik_data$sem <- 0
-ilastik_data$sem[which(grepl("WT", ilastik_data$condition))] <- ilastik_sem_wt
-ilastik_data$sem[which(grepl("KO", ilastik_data$condition))] <- ilastik_sem_ko
-
-#add normalized count to data frame
-ilastik_data$mean_normalized_count <- 0
-ilastik_data$mean_normalized_count[which(grepl("WT", ilastik_data$condition))] <- mean(ilastik_data$normalized_count[which(grepl("WT", ilastik_data$condition))])
-ilastik_data$mean_normalized_count[which(grepl("KO", ilastik_data$condition))] <- mean(ilastik_data$normalized_count[which(grepl("KO", ilastik_data$condition))])
-
-
-
-
-
-synquant_grouped <- nlme::groupedData(normalized_count ~ condition | pair, data = synquant_data)
-
-synquant_lme <- nlme::lme(synquant_grouped)
-
-synquant_lme
-summary(synquant_lme)
-anova(synquant_lme)
-
-synquant_tukeys <- summary(glht(synquant_lme, linfct=mcp(condition="Tukey")))
-synquant_tukeys
-synquant_tukeysPH <- data.frame(as.character(row.names(synquant_tukeys$linfct)), synquant_tukeys$test$pvalues)
-
-#calculate sem = sd/sqrt(n)
-synquant_sem_wt <- sd(synquant_norm_means$`mean(normalized_count)`[which(grepl("WT", synquant_norm_means$condition))])/sqrt(length(synquant_norm_means$condition[which(grepl("WT", synquant_norm_means$condition))]))
-
-synquant_sem_ko <- sd(synquant_norm_means$`mean(normalized_count)`[which(grepl("KO", synquant_norm_means$condition))])/sqrt(length(synquant_norm_means$condition[which(grepl("KO", synquant_norm_means$condition))]))
-
-synquant_data$sem <- 0
-synquant_data$sem[which(grepl("WT", synquant_data$condition))] <- synquant_sem_wt
-synquant_data$sem[which(grepl("KO", synquant_data$condition))] <- synquant_sem_ko
-
-#add normalized count to data frame
-synquant_data$mean_normalized_count <- 0
-synquant_data$mean_normalized_count[which(grepl("WT", synquant_data$condition))] <- mean(synquant_data$normalized_count[which(grepl("WT", synquant_data$condition))])
-synquant_data$mean_normalized_count[which(grepl("KO", synquant_data$condition))] <- mean(synquant_data$normalized_count[which(grepl("KO", synquant_data$condition))])
-
-```
-
-```{r plot normalized synapse counts}
-
-manual_plot.df <- summarize(group_by(manual_synbot_data, condition), mean(normalized_count))
-manual_plot.df$sem <- 0
-manual_plot.df$sem[which(grepl("WT", manual_plot.df$condition))] <- manual_sem_wt
-manual_plot.df$sem[which(grepl("KO", manual_plot.df$condition))] <- manual_sem_ko
-
-ggplot(manual_plot.df, aes(x = condition, y = `mean(normalized_count)`)) + 
-  geom_col(fill = NA, color = "black") + 
-  geom_jitter(data = manual_synbot_data, aes(x = condition, y = normalized_count), color = "darkgray") +
-  geom_point(data = manual_norm_means, aes(x = condition, y = `mean(normalized_count)`), size = 5, position = position_dodge2(0.5)) +
-  labs(title = "in vivo Synapses Manual SynBot", y = "Colocalized Puncta per Image") +
-  annotate("text", x = 2, y = 1.3, label = "p<0.001") +
-  geom_errorbar(aes(ymin=`mean(normalized_count)`-sem, ymax=`mean(normalized_count)`+sem), width=.2)
-
-#ggsave("invivo_a2d1_manual.pdf", width = 3.5, height = 5)
-
-ilastik_plot.df <- summarize(group_by(ilastik_data, condition), mean(normalized_count))
-ilastik_plot.df$sem <- 0
-ilastik_plot.df$sem[which(grepl("WT", ilastik_plot.df$condition))] <- ilastik_sem_wt
-ilastik_plot.df$sem[which(grepl("KO", ilastik_plot.df$condition))] <- ilastik_sem_ko
-
-ggplot(ilastik_plot.df, aes(x = condition, y = `mean(normalized_count)`)) + 
-  geom_col(fill = NA, color = "black") +
-  geom_jitter(data = ilastik_data, aes(x = condition, y = normalized_count), color = "darkgray") +
-  geom_point(data = ilastik_norm_means, aes(x = condition, y = `mean(normalized_count)`), size = 5, position = position_dodge2(0.5)) +
-  labs(title = "in vivo Synapses ilastik SynBot", y = "Colocalized Puncta per Image") +
-  annotate("text", x = 2, y = 1.5, label = "p=0.002") +
-  geom_errorbar(aes(ymin=`mean(normalized_count)`-sem, ymax=`mean(normalized_count)`+sem), width=.2,
-                 position=position_dodge(.9))
-
-#ggsave("invivo_a2d1_ilastik.pdf", width = 3.5, height = 5)
-
-
-
-synquant_plot.df <- summarize(group_by(synquant_data, condition), mean(normalized_count))
-synquant_plot.df$sem <- 0
-synquant_plot.df$sem[which(grepl("WT", synquant_plot.df$condition))] <- synquant_sem_wt
-synquant_plot.df$sem[which(grepl("KO", synquant_plot.df$condition))] <- synquant_sem_ko
-
-ggplot(synquant_plot.df, aes(x = condition, y = `mean(normalized_count)`)) + 
-  geom_col(fill = NA, color = "black") +
-  geom_jitter(data = synquant_data, aes(x = condition, y = normalized_count), color = "darkgray") +
-  geom_point(data = synquant_norm_means, aes(x = condition, y = `mean(normalized_count)`), size = 5, position = position_dodge2(0.5)) +
-  labs(title = "in vivo Synapses Puncta Analyzer", y = "Colocalized Puncta per Image") +
-  annotate("text", x = 2, y = 1.5, label = "p<0.001") +
-  geom_errorbar(aes(ymin=`mean(normalized_count)`-sem, ymax=`mean(normalized_count)`+sem), width=.2,
-                 position=position_dodge(.9))
-
-#ggsave("invivo_a2d1_synquant.pdf", width = 3.5, height = 5)
-
-```
 
 ```{r faceted plots}
 
@@ -380,19 +232,43 @@ combined_data <- rbind(manual_synbot_data, ilastik_data)
 
 combined_data <- rbind(combined_data, synquant_data)
 
-ggplot(data= combined_data, aes(x=condition, y=normalized_count)) + 
+ggplot(data= combined_data, aes(x=condition, y=Colocalized.Puncta.Count)) + 
   geom_bar(stat = "summary", fill = NA, color = "black") +
   facet_grid(cols = vars(analysis_type)) +
   geom_jitter(size = 0.5, width = 0.1, aes(color = condition)) +
-  geom_point(data = summarize(group_by(combined_data, analysis_type, condition, pair), mean(normalized_count)), aes(x = condition, y = `mean(normalized_count)`, color = condition), size = 3, position = position_dodge2(0.5)) +
-  geom_errorbar(aes(ymin=mean_normalized_count-sem, ymax=mean_normalized_count+sem), width=.2,
-                 position=position_dodge(.9)) +
-  labs(y = "Fold change in synapse number \n (colocalization of VGluT1 and PSD95)") +
+  geom_point(data = summarize(group_by(combined_data, analysis_type, condition, pair), mean(Colocalized.Puncta.Count)), aes(x = condition, y = `mean(Colocalized.Puncta.Count)`, color = condition), size = 3, position = position_dodge2(0.5)) +
+  labs(y = "colocalization of VGluT1 and PSD95") +
   scale_color_manual(values = c("black", "black")) + theme(legend.position = "none")
 
 #ggsave("C:/Users/savag/Duke Research Team Dropbox/Justin Savage/Team_Syn_Bot/20230103_figures/figure_5_in_vivo/invivo_a2d1_faceted.pdf", width = 6.5, height = 3.5)
 
 ```
+
+```{r faceted plots with truth}
+
+#combine data into one data frame
+
+combined_data <- rbind(manual_synbot_data, ilastik_data)
+
+combined_data <- rbind(combined_data, synquant_data)
+
+ggplot(data= combined_data, aes(x=condition, y=Colocalized.Puncta.Count)) + 
+  facet_grid(cols = vars(analysis_type)) +
+  geom_jitter(size = 0.5, width = 0.1, aes(color = condition)) +
+  labs(y = "colocalization of VGluT1 and PSD95") +
+  scale_color_manual(values = c("black", "black")) + theme(legend.position = "none")
+
+#ggsave("C:/Users/savag/Duke Research Team Dropbox/Justin Savage/Team_Syn_Bot/20230103_figures/figure_5_in_vivo/invivo_a2d1_faceted.pdf", width = 6.5, height = 3.5)
+
+#ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +
+#  geom_dotplot(binaxis = "y", stackdir = "center")
+
+ggplot(data = combined_data) + 
+  #facet_grid(cols = vars(analysis_type)) +
+  geom_dotplot(binwidth = 5, binaxis = "y", stackdir = "center", aes(x = analysis_type, y = Colocalized.Puncta.Count))
+
+```
+
 
 ```{r simple lm }
 
