checking sim accuracy

--- a/20230104_synapse_data_plots/20240306_sim_data_plots.Rmd
+++ b/20230104_synapse_data_plots/20240306_sim_data_plots.Rmd
@@ -256,7 +256,8 @@ ggplot(data= combined_data, aes(x=condition, y=Colocalized.Puncta.Count)) +
   facet_grid(cols = vars(analysis_type)) +
   geom_jitter(size = 0.5, width = 0.1, aes(color = condition)) +
   labs(y = "colocalization of VGluT1 and PSD95") +
-  scale_color_manual(values = c("black", "black")) + theme(legend.position = "none")
+  scale_color_manual(values = c("black", "black")) + theme(legend.position = "none") +
+  geom_hline(yintercept = 333)
 
 #ggsave("C:/Users/savag/Duke Research Team Dropbox/Justin Savage/Team_Syn_Bot/20230103_figures/figure_5_in_vivo/invivo_a2d1_faceted.pdf", width = 6.5, height = 3.5)
 
@@ -265,7 +266,14 @@ ggplot(data= combined_data, aes(x=condition, y=Colocalized.Puncta.Count)) +
 
 ggplot(data = combined_data) + 
   #facet_grid(cols = vars(analysis_type)) +
-  geom_dotplot(binwidth = 5, binaxis = "y", stackdir = "center", aes(x = analysis_type, y = Colocalized.Puncta.Count))
+  geom_dotplot(binwidth = 5, binaxis = "y", stackdir = "center", aes(x = analysis_type, y = Colocalized.Puncta.Count)) +
+  geom_hline(yintercept = 333, linetype = 2, color = "gray")
+
+ggplot(data = combined_data) + 
+  #facet_grid(cols = vars(analysis_type)) +
+  geom_hline(yintercept = 333, linetype = 2, color = "black") +
+  geom_violin(fill = "yellow", aes(x = analysis_type, y = Colocalized.Puncta.Count))
+  
 
 ```
 
