--- a/20230104_synapse_data_plots/20240312_check_accuracy.Rmd
+++ b/20230104_synapse_data_plots/20240312_check_accuracy.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "20230411_puncta_circularity"
+title: "20240312_check_accuracy"
 output: html_document
-date: "2023-04-11"
+date: "2024-03-12"
 ---
 
 ```{r setup, include=FALSE}
