--- a/20230104_synapse_data_plots/20240312_check_accuracy.Rmd
+++ b/20230104_synapse_data_plots/20240312_check_accuracy.Rmd
@@ -129,7 +129,10 @@ output_df$true_neg_count <- 0
 
 
 
-```{r calculate accuracy}
+```{r calculate recall}
+
+#recall is true positive / (true positve + false negative)
+#recall is the same as true positive rate
 
 #for each image
 for(m in 1:length(colocDataIn)){
@@ -170,10 +173,93 @@ for(m in 1:length(colocDataIn)){
   }
 }
 
+output_df$recall <- output_df$true_pos_count/(output_df$true_pos_count+output_df$false_neg_count)
 
 ```
 
 
+```{r plot precision}
+
+#precision is true positive / (true positve + false positive)
+
+#for each image
+for(m in 1:length(colocDataIn)){
+  
+  currentData = colocDataIn[[m]]
+  
+  #for each puncta in the image
+  for(j in 1:length(currentData$colocX)){
+    currentX <- currentData$colocX[j]
+    currentY <- currentData$colocY[j]
+    
+    #set match_found to false and then set it to true if any of the puncta overlap the truth
+    match_found <- FALSE
+    
+    #for each location in the ground truth
+    for(ii in 1:length(true_colocs$coord_string)){
+      currentTrueX <- true_colocs$x[ii]
+      currentTrueY <- true_colocs$y[ii]
+      
+    #print(currentTrueX)
+    #print(currentTrueY)
+      
+      if(currentX > (currentTrueX - 5) && currentX < (currentTrueX + 5)){
+        if(currentY > (currentTrueY - 5) && currentY < (currentTrueY + 5)){
+          match_found <- TRUE
+        }
+      }
+    }
+    
+    if(match_found == TRUE){
+      #true positives already counted
+      #print("true pos")
+      #output_df$true_pos_count[m] <- output_df$true_pos_count[m] + 1
+    }
+    #if none of the true locations match this punctas location
+    if(match_found == FALSE){
+      #print("false neg")
+      output_df$false_pos_count[m] <- output_df$false_pos_count[m] + 1
+    }
+  }
+}
+
+output_df$precision <- output_df$true_pos_count/(output_df$true_pos_count+output_df$false_pos_count)
+
+```
+
+
+```{r plot recall and precision}
+
+
+#initialize columns
+output_df$condition <- "unknown"
+output_df$noise_level <- "unknown"
+
+#label data with experimental condition
+output_df[which(grepl("*WT*", output_df$image)),]$condition <- "WT"
+output_df[which(grepl("*KO*", output_df$image)),]$condition <- "KO"
+
+#make condition a factor so that it always plots in WT then KO order
+output_df$condition <- factor(output_df$condition, levels = c("WT", "KO"))
+
+#lable data with noise level
+output_df[which(grepl("0_00", output_df$image)),]$noise_level <- "0.00"
+output_df[which(grepl("0_25", output_df$image)),]$noise_level <- "0.25"
+output_df[which(grepl("0_50", output_df$image)),]$noise_level <- "0.50"
+output_df[which(grepl("0_75", output_df$image)),]$noise_level <- "0.75"
+output_df[which(grepl("1_00", output_df$image)),]$noise_level <- "1.00"
+
+output_df$noise_level <- factor(output_df$noise_level, levels = c("0.00", "0.25", "0.50", "0.75", "1.00"))
+
+output_df$image_id <- seq.int(nrow(output_df))
+
+#write.csv(output_df, "output_df.csv")
+
+ggplot(data = output_df) + 
+  #facet_grid(cols = vars(analysis_type)) +
+  geom_violin( aes(x = noise_level, y = recall))
+
+```
 
 
 
