--- a/20230104_synapse_data_plots/20240316_check_accuracy.Rmd
+++ b/20230104_synapse_data_plots/20240316_check_accuracy.Rmd
@@ -366,7 +366,7 @@ recall_means$sd <- summarize(group_by(combined_data, noise_level, analysis_type)
 
 recall_means$sem <- recall_means$sd/sqrt(length(combined_data$recall))
 
-ggplot(data = recall_means, aes(x = noise_level, y = recall, color = analysis_type)) + geom_line() + geom_errorbar(aes(ymin=recall-sem, ymax=recall+sem), width=.1) + ylim(0, 1) +scale_color_ordinal(name = "Thresholding Method") + xlab("noise level")
+ggplot(data = recall_means, aes(x = noise_level, y = recall, color = analysis_type)) + geom_line() + geom_errorbar(aes(ymin=recall-sem, ymax=recall+sem), width=.1) + ylim(0, 1) +scale_color_ordinal(name = "Thresholding Method") + xlab("noise level") + ylab("recall frac(TP/(TP+FN))")
 
 #ggsave("C:/Users/savag/Duke Research Team Dropbox/Justin Savage/Team_Syn_Bot/20230103_figures/figure_0_simulated_data/synbot_recall.pdf", width = 5, height = 2.75)
 
@@ -382,7 +382,7 @@ precision_means$sd <- summarize(group_by(combined_data, noise_level, analysis_ty
 
 precision_means$sem <- precision_means$sd/sqrt(length(combined_data$precision))
 
-ggplot(data = precision_means, aes(x = noise_level, y = precision, color = analysis_type)) + geom_line() + geom_errorbar(aes(ymin=precision-sem, ymax=precision+sem), width=.1) + ylim(0, 1) +scale_color_ordinal(name = "Thresholding Method") + xlab("noise level")
+ggplot(data = precision_means, aes(x = noise_level, y = precision, color = analysis_type)) + geom_line() + geom_errorbar(aes(ymin=precision-sem, ymax=precision+sem), width=.1) + ylim(0, 1) +scale_color_ordinal(name = "Thresholding Method") + xlab("noise level") + ylab(paste("precision ", frac(TP/(TP+FP))))
 
 #ggsave("C:/Users/savag/Duke Research Team Dropbox/Justin Savage/Team_Syn_Bot/20230103_figures/figure_0_simulated_data/synbot_precision.pdf", width = 5, height = 2.75)
 
