--- a/20230104_synapse_data_plots/20240116_invivo_plots.Rmd
+++ b/20230104_synapse_data_plots/20240116_invivo_plots.Rmd
@@ -496,20 +496,22 @@ tukey_1 <- TukeyHSD(model_1)
 tukey_1
 ```
 
+
+
 ```{r repeated measures plot}
 
 gg.base <- ggplot(combined_data, aes(x = analysis_type, y = Red.Puncta.Count))
-gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Red.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik')) + ylab("PSD95 (Red) Puncta Count")
+gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Red.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik', 'synquant')) + ylab("PSD95 (Red) Puncta Count")
 
 #ggsave("F:/Savage_Dropbox/Dropbox (Duke Research Team)/Team_Syn_Bot/20230103_figures/figure_s1_line_plots/invivo_red_line_plot_raw.pdf", width = 5, height = 2.75)
 
 gg.base <- ggplot(combined_data, aes(x = analysis_type, y = Green.Puncta.Count))
-gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Green.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik')) + ylab("VGLuT1 (Green) Puncta Count")
+gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Green.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik', 'synquant')) + ylab("VGLuT1 (Green) Puncta Count")
 
 #ggsave("F:/Savage_Dropbox/Dropbox (Duke Research Team)/Team_Syn_Bot/20230103_figures/figure_s1_line_plots/invivo_green_line_plot_raw.pdf", width = 5, height = 2.75)
 
 gg.base <- ggplot(combined_data, aes(x = analysis_type, y = Colocalized.Puncta.Count))
-gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Colocalized.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik')) + ylab("Colocalized Puncta Count")
+gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(aes(group = image_id, shape = condition)) + stat_summary(mapping = aes(x = analysis_type, y = Colocalized.Puncta.Count), fill = NA , geom = 'col', fun.y = 'mean', color = 'black') + scale_color_viridis_b() + facet_grid(cols = vars(condition))+ scale_x_discrete(labels=c('puncta \n analyzer', 'manual \n synbot', 'ilastik', 'synquant')) + ylab("Colocalized Puncta Count")
 
 #ggsave("F:/Savage_Dropbox/Dropbox (Duke Research Team)/Team_Syn_Bot/20230103_figures/figure_s1_line_plots/invivo_coloc_line_plot_raw.pdf", width = 5, height = 2.75)
 
@@ -522,6 +524,9 @@ gg.base + geom_line(aes(group = image_id, linetype = condition)) + geom_point(ae
 
 
 ```{r test for difference in analysis methods}
+
+analysis_anova <- aov(normalized_count~analysis_type, data = combined_data)
+summary(analysis_anova)
 
 model_1 <- aov(normalized_count~analysis_type+condition, data = combined_data)
 summary(model_1)
